# lihtc-philly-streamlit

./: README.md  geocode.py  pyproject.toml  query_opa_properties.py  requirements.txt  run.sh  streamlit_app.py
dashboard_data/: properties.csv  subsidies.csv  violations.csv
geojson/: lihtc_opd.geojson
