[project]
name = "lihtc-philly-data"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "streamlit>=1.49.1",
    "streamlit-folium>=0.25.1",
    "typer>=0.17.3",
]

[project.optional-dependencies]
dev = [
    "geospatial>=0.11.6",
]
